--- a/pom.xml
+++ b/pom.xml
@@ -5,8 +5,8 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>ru.job4j</groupId>
-  <artifactId>tracker</artifactId>
-  <version>1.0</version>
+  <artifactId>UserManager</artifactId>
+  <version>0.4</version>
   <packaging>jar</packaging>
 
   <properties>
